# rusty-word-smith

./: .gitattributes  .gitignore  Cargo.toml  README.md  Secrets.dev.toml  Secrets.toml  Shuttle.toml  WARP.md
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  errors.rs  lib.rs  response.rs
app/src/authorization/: current_user.rs  guards.rs  mod.rs
app/src/models/: mod.rs
app/src/models/user/: dto.rs  entity.rs  error.rs  mod.rs  repository.rs  service.rs  tests.rs
app/src/routes/: index.rs  mod.rs  static_server.rs
app/src/routes/admin/: dashboard.rs  mod.rs
app/src/routes/auth/: check_email.rs  login.rs  logout.rs  mod.rs  register.rs  resend.rs  verify.rs  whoami.rs
configuration/: base.yml  dev.yml  prod.yml  test.yml
project/: database_schema_diagram.mermaid  plan.md
scripts/: init_db.ps1  init_db.sh
server/: Cargo.toml
server/src/: configuration.rs
server/tests/integration/: admin.rs  auth.rs  email_verification.rs  helpers.rs  main.rs  ping.rs  registration.rs  static_files.rs  template.rs
server_sdk/: Cargo.toml
server_sdk/src/: lib.rs
shuttle/: Cargo.toml
shuttle/migrations/: 20250803031730_create_enums.down.sql  20250803031730_create_enums.up.sql  20250803031740_create_users.down.sql  20250803031740_create_users.up.sql  20250803031745_create_sessions.down.sql  20250803031745_create_sessions.up.sql  20250803031748_create_categories.down.sql  20250803031748_create_categories.up.sql  20250803031756_create_tags.down.sql  20250803031756_create_tags.up.sql  20250803031803_create_posts.down.sql  20250803031803_create_posts.up.sql  20250803031809_create_pages.down.sql  20250803031809_create_pages.up.sql  20250803031819_create_post_categories.down.sql  20250803031819_create_post_categories.up.sql  20250803031824_create_post_tags.down.sql  20250803031824_create_post_tags.up.sql  20250803031834_create_metadata.down.sql  20250803031834_create_metadata.up.sql  20250803031839_create_comments.down.sql  20250803031839_create_comments.up.sql  20250803031845_create_triggers.down.sql  20250803031845_create_triggers.up.sql  20250803031850_create_media.down.sql  20250803031850_create_media.up.sql  20250803031855_create_revisions.down.sql  20250803031855_create_revisions.up.sql  20250803031860_create_post_media.down.sql  20250803031860_create_post_media.up.sql  20250803031865_create_page_media.down.sql  20250803031865_create_page_media.up.sql  20250803031870_create_plugins.down.sql  20250803031870_create_plugins.up.sql  20250803031871_create_plugin_hooks.down.sql  20250803031871_create_plugin_hooks.up.sql  20250803031872_create_custom_post_types.down.sql  20250803031872_create_custom_post_types.up.sql  20250803031873_create_plugin_pages.down.sql  20250803031873_create_plugin_pages.up.sql  (+8 more)
shuttle/src/: main.rs  shuttle_pavex.rs  startup.rs
static/: screen.css  scripts.js
templates/: base.html  index.html
templates/admin/: index.html
templates/auth/: check_email.html  login.html  register.html
workspace_hack/: Cargo.toml
