[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[lints.rust]
# `pavex_ide_hint` is used in Pavex's `f!` macro to "nudge" the IDE
# and force it to provide completions and "go-to-definition" correctly
# for the paths passed to the `f!` macro.
# It must be allowed in all local crates that use `f!`.
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(pavex_ide_hint)'] }

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
cargo_px_env = "0.1"
humantime-serde = "1.1"
pavex = { version = "0.2.2" }
pavex_tracing = { version = "0.2.2" }
pavex_cli_client = { version = "0.2.2" }
pavex_session = "0.2.2"
pavex_session_sqlx = { version = "0.2.2", features = [ "postgres" ] }
pavex_static_files = { git = "https://github.com/sentinel1909/pavex_static_files.git", rev = "5ced7ab" }
pavex_tera_template = { git = "https://github.com/sentinel1909/pavex_tera_template.git", features = [
    "serde",
], rev = "1fa1136" }
regex = "1.11.1"
serde_json = "1.0.142"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
sqlx = { version = "0.8.4", features = [
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "uuid",
    "macros",
    "time",
    "postgres",
] }
thiserror = "2.0.12"
tracing = "0.1"
tracing-log = "0.2.0"
tracing_log_error = "0.1"
workspace_hack = { path = "../workspace_hack" }
uuid = "1.17.0"
validator = { version = "0.20.0", features = ["derive"] }



