[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
# Telemetry
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing_log_error = { version = "0.1" }
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "registry",
    "smallvec",
    "std",
    "tracing-log",
] }

# Configuration
dotenvy = "0.15"

anyhow = "1"
pavex = { version = "0.2.2" }
tokio = { version = "1", features = ["full"] }
server_sdk = { path = "../server_sdk" }
app = { path = "../app" }
workspace_hack = { path = "../workspace_hack" }
uuid = "1.17.0"

[dev-dependencies]
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
reqwest = "0.12"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls", "migrate", "uuid", "macros", "chrono", "postgres" ] }
uuid = { version = "1.16.0", features = ["v4", "serde" ] }