[package]
name = "server_sdk"
version = "0.1.0"
edition = "2024"

[package.metadata.px.generate]
generator_type = "cargo_workspace_binary"
generator_name = "bp"

[package.metadata.px.verify]
verifier_type = "cargo_workspace_binary"
verifier_name = "bp"
verifier_args = ["--check"]

[lints]
clippy = { all = "allow" }

[dependencies]
app = { version = "0.5", path = "../app", default-features = false }
biscotti = { version = "0.4", default-features = false }
http = { version = "1", default-features = false }
hyper = { version = "1", default-features = false }
matchit = { version = "0.8", default-features = false }
pavex = { version = "0.2", default-features = false }
pavex_session = { version = "0.2", default-features = false }
pavex_session_sqlx = { version = "0.2", default-features = false }
pavex_static_files = { version = "0.6", git = "https://github.com/sentinel1909/pavex_static_files.git", rev = "5ced7ab", default-features = false }
pavex_tera_template = { version = "0.4", git = "https://github.com/sentinel1909/pavex_tera_template.git", rev = "1fa1136", default-features = false }
pavex_tracing = { version = "0.2", default-features = false }
serde = { version = "1", default-features = false }
sqlx-core = { version = "0.8", default-features = false }
sqlx-postgres = { version = "0.8", default-features = false }
thiserror = { version = "2", default-features = false }
